<resources>
    <string name="app_name">WhereIsThis</string>
    <string name="action_settings">Settings</string>
    <string name="help">Help</string>
    <string name="highscore">High Score</string>
    <string name="play">Play</string>
    <string name="easy">Easy</string>
    <string name="medium">Medium</string>
    <string name="hard">Hard</string>
    <string name="title_activity_choose_game_mode">GameMode</string>
    <string name="mode1">Countries</string>
    <string name="mode2">Capitals</string>
    <string name="mode3">Monuments</string>
    <string name="title_activity_play_game">PlayGame</string>
    <string name="start">Start</string>
    <string name="playagain">Play Again</string>
    <string name="place">Place</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_ranking">Ranking</string>
    <string name="title_activity_help">Help</string>
    <string name="next">Next</string>
    <string name="back">Back</string>
    <string name="title_activity_about">About</string>
    <string name="about">Developed by:\n Cristian Pinto \n Computer Science Student</string>
</resources>
