<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="me.cristianpinto.whereisthis.ChooseGameMode">

    <Button
        android:background="#52B3D9"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.33"
        android:text="@string/mode1"
        android:textSize="50dp"
        android:onClick="playGameMode1"/>
    <Button
        android:background="#336e7b"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.33"
        android:text="@string/mode2"
        android:textSize="50dp"
        android:onClick="playGameMode2"/>
    <Button
        android:background="#2574a9"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.33"
        android:text="@string/mode3"
        android:textSize="50dp"
        android:onClick="playGameMode3"/>





</LinearLayout>
