<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="me.cristianpinto.whereisthis.PlayGame"
    android:background="#19b5fe">



    <ImageView android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:src="@drawable/sacountries"
        android:scaleType="centerInside"
        android:id="@+id/continent" />


    <Button android:text="@string/place"
        android:background="#00000000"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textSize="35dp"
        android:layout_centerHorizontal="true"
        android:id="@+id/TView"
        android:onClick="newRandomWord" />

    <TextView android:text="Error"
        android:textColor="#ef2313"
        android:layout_below="@id/TView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15dp"
        android:layout_centerHorizontal="true"
        android:id="@+id/ErrorView"/>

    <TextView android:text="Timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="15dp"
        android:layout_alignParentBottom="true"
        android:id="@+id/TimerView"/>

    <TextView android:text="Score: "
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25dp"
        android:layout_marginBottom="10dp"
        android:layout_marginRight="15dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:id="@+id/ScoreView"/>

    <Button
        android:background="@drawable/roundedbutton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignLeft="@id/TimerView"
        android:layout_above="@id/TimerView"
        android:layout_marginBottom="10dp"
        android:text="+"
        android:textSize="30dp"
        android:id="@+id/zoomin"
        android:onClick="ZoomIn"/>

    <Button
        android:background="@drawable/roundedbutton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignRight="@id/ScoreView"
        android:layout_above="@id/ScoreView"
        android:layout_marginBottom="10dp"
        android:text="-"
        android:textSize="40dp"
        android:id="@+id/zoomout"
        android:onClick="ZoomOut"/>

    <Button
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:background="@drawable/roundedbutton"
        android:text="@string/start"
        android:textSize="40dp"
        android:layout_centerInParent="true"
        android:id="@+id/start"
        android:onClick="SetClickable" />
    <Button
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:background="@drawable/roundedbutton"
        android:text="@string/playagain"
        android:textSize="40dp"
        android:layout_centerInParent="true"
        android:id="@+id/playagain"
        android:onClick="PlayAgain"
        android:visibility="gone" />




</RelativeLayout>
